@@ -6,7 +6,9 @@ eZ Online Editor 5.0 extension Changelog
 * Added Italian translation contributed by Sandra Parente
 * Added setting to give validation warning if embed objects is in trash
   for issue #13391: ezoe handles removed images incorrect
-# Added support for paste plugin dialogs (buttons: paste from word and text)
+* Added support for paste plugin dialogs (buttons: paste from word and text)
+* Do not convert u tag to custom:underline tag if underline custom tag isn't enabled
+  To make sure only tag is removed and not content of the tag as well.
 
 
 5.0rc6
